--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -246,9 +246,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 #wpo-wcpdf-preview-wrapper .sidebar > form {
 	background: white;
 	overflow: hidden;
-	padding: 0 2em;
+	padding: 0;
+	margin-left: 2em;
 	box-sizing: border-box;
-	width: 100%;
+	width: calc(100% - 4em);
 	max-width: 50vw;
 }
 
