--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -486,8 +486,8 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	float: right;
 }
 
-.preview-document .preview-data p.order-number,
-.preview-document .preview-data p.order-search {
+.preview-document .preview-data p.order-search-id,
+.preview-document .preview-data p.order-search-customer {
 	display: none;
 }
 
