--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -297,6 +297,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	width: 100%;
 }
 
+input[type="text"][size] {
+	width: auto !important;
+}
+
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input#next_invoice_number {
 	width: auto !important;
 }
