Set a max-width on the sidebar

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -381,11 +381,11 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="sidebar"] .sidebar {
 	flex: 0 0 35%;
+	max-width: 35%;
 }
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="full"] .sidebar {
-	flex: 0 0 100%;
-	margin-left: -100%;
+	margin-left: -35%;
 }
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-from-preview-state="full"] .sidebar {
