--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -704,6 +704,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	display: none;
 }
 
+#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="sidebar"]  .gutter {
+	height: 100vh;
+}
+
 #wpo-wcpdf-preview-wrapper[data-preview-state="full"] .slide-right:after {
 	display: inline-block;
 }
