--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -729,6 +729,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	background-color: #f8f8f8;
 }
 
+#wpo-wcpdf-preview-wrapper[data-preview-state="sidebar"] .select2.select2-container {
+	width: 100%!important;
+}
+
 @media screen and (max-width: 1200px) {
 	.preview-document .preview > #preview-canvas {
 		max-width: 680px;
